# libcurves

./: .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/libcurves/: libcurves.hpp
test/: CMakeLists.txt
test/source/: libcurves_test.cpp
